--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./favicon.jpg" />
+    <link rel="icon" href="/benjamincordero.github.io/favicon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benjamín Cordero</title>
-    <script type="module" crossorigin src="./assets/index.a564ffe5.js"></script>
-    <link rel="modulepreload" href="./assets/vendor.9eceaa27.js">
-    <link rel="stylesheet" href="./assets/index.94a59a2c.css">
+    <script type="module" crossorigin src="/benjamincordero.github.io/assets/index.710c1685.js"></script>
+    <link rel="modulepreload" href="/benjamincordero.github.io/assets/vendor.9eceaa27.js">
+    <link rel="stylesheet" href="/benjamincordero.github.io/assets/index.457a982e.css">
   </head>
   <body>
     <div id="app"></div>
