--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/benjamincordero.github.io/favicon.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Benjamín Cordero</title>
-    <script type="module" crossorigin src="/benjamincordero.github.io/assets/index.710c1685.js"></script>
-    <link rel="modulepreload" href="/benjamincordero.github.io/assets/vendor.9eceaa27.js">
-    <link rel="stylesheet" href="/benjamincordero.github.io/assets/index.457a982e.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Benjamín Cordero</title>
+  <script type="module" crossorigin src="/assets/index.3b6581c9.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.9eceaa27.js">
+  <link rel="stylesheet" href="/assets/index.4a060212.css">
+</head>
+
+<body>
+  <div id="app"></div>
+  
+</body>
+
 </html>
